# trackingGPS

./: .env  README.md  deploy.sh  docker-compose.yml  init.sql
consumer/: .env  Cargo.toml  Dockerfile  docker-compose.yml
consumer/db/: Dockerfile  init.sql
consumer/src/: main.rs
front/: .env  docker-compose.yml
front/angular/: Dockerfile  angular.json  package-lock.json  package.json
front/angular/src/app/map/: map.component.ts
front/angular/src/app/model/: IPosition.ts  Icons.ts
front/angular/src/app/services/: websocket.service.ts
front/springboot/: Dockerfile  pom.xml
front/springboot/src/main/java/com/example/springboot/config/: CacheConfiguration.java  ListenerConfiguration.java  NotifierConfiguration.java  WebSocketConfig.java
front/springboot/src/main/java/com/example/springboot/models/: GPSTracker.java
front/springboot/src/main/java/com/example/springboot/repository/: GPSTrackerRepository.java
front/springboot/src/main/java/com/example/springboot/services/: GPSTrackerService.java  NotificationHandler.java  NotifierService.java
front/springboot/src/main/java/com/example/springboot/websocket/: GPSWebSocketHandler.java  WebSocketConfig.java
front/springboot/src/main/resources/: application.properties
kafka/: docker-compose.yml
producer/: .env  Dockerfile  docker-compose.yml  requirements.txt
producer/app/: GPSCoordinates.py  ProducerInterface.py  main.py
