[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
kafka = "0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version="0.7.2", features=["with-uuid-0_8"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = [] }
[dependencies.uuid]
version = "1.6.1"
features = [
    "v5",
]